--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "clsx": "^2.0.0",
     "docusaurus-plugin-sass": "^0.2.3",
     "prism-react-renderer": "^2.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
     "sass": "^1.62.0"
   },
   "devDependencies": {
